# AI_yeonyhea_simulator.c-

./: 1.txt
ai-dating-sim/: CMakeLists.txt  README.md
ai-dating-sim/data/: persona.txt  save.json
ai-dating-sim/include/: character.h  ollama_client.h  utils.h
ai-dating-sim/src/: character.cpp  main.cpp  ollama_client.cpp  utils.cpp
